Update POMs